Fix padding between title and toc on mobile

--- a/app/assets/stylesheets/base/_text_content.scss
+++ b/app/assets/stylesheets/base/_text_content.scss
@@ -1,10 +1,5 @@
 @mixin margin($margin: 1) {
   margin-bottom: #{$margin}rem;
-  margin-top: #{$margin}rem;
-
-  &:first-child {
-    margin-top: 0;
-  }
 }
 
 @mixin body {
